--- a/web/templates/exp06.html
+++ b/web/templates/exp06.html
@@ -88,12 +88,25 @@
                                                 </div>
                                                 <div class="task-content">
                                                     <div class="task-content-description">
-                                                        <p>经进一步审计,该对样本附近,模型的个体公平性为[[ old_individual_fairness
-                                                            ]]，低于模型在总体数据上的公平性表现[[ globalFairness ]]</p>
+                                                        <p>经进一步审计,该对样本附近,模型的个体公平性为
+                                                            <b>
+                                                            [[ old_individual_fairness]]
+                                                            </b>
+                                                            ，低于模型在总体数据上的公平性表现
+                                                            <b>
+                                                                [[ globalFairness ]]
+                                                            </b>
 
-                                                        <p>模型优化建议：采用[[optimization]]的优化方法</p>
+                                                        </p>
+
+                                                        <p>模型优化建议：采用
+                                                            <b>[[optimization]]</b>
+                                                            的优化方法
+                                                        </p>
                                                         <br>
-                                                        <p>优化完成后预计的公平性表现预计为：[[ new_individual_fairness ]]</p>
+                                                        <p>优化完成后预计的公平性表现预计为：
+                                                            <b>[[ new_individual_fairness ]]</b>
+                                                        </p>
                                                     </div>
                                                 </div>
 
